assets/css/style.css
/* ... */
@keyframes slideInDown {
    0% {
        transform: translateY(-50px);
        opacity: 0;
    }
    100% {
        transform: translateY(0);
        opacity: 1;
    }
}

.fade-in {
    animation: fadeIn 0.3s ease-in-out;
}

.slide-in-up{
    animation: slideInUp 1.3s ease-in-out;

}

.slide-in-down{
    animation: slideInDown 1.3s ease-in-out;

}
/* Header */
header {
    height: 8vh;
}

#menu-button {
    display: none;
}

/* Nav toggle */
#menu-button:checked~#navbarSupportedContent {
    display: block;
    background-color: #088395;
    animation: slideInUp 1.3s ease-in-out;

}

.navbar:has(#menu-button:checked) {
    background-color: #088395;
    position: absolute;
    display: block;
    height: 100%;
    width: 100%;
    z-index: 1;
}

#subscribe-main {
    margin-top: -8vh;
}

#bg-img {
    width: 100%;
    margin-top: -8vh;
    object-fit: contain;

}


#confirmation-msg {
    margin-top: 8vh;
    margin-bottom: 8vh;
    margin-left: 4vw;
    margin-right: 4vw;
    text-align: center;
}

#confirmation-background-img {
    width: 100%;
}

#confirmation-div {
    min-height: 78vh;
    position: relative;
    bottom: 0;
}


.error-container, .confirmation-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 85vh;
    text-align: center;
    margin-left: 10px;
    margin-right: 10px;
}

.error-image{
    max-width: 300px;
    margin-bottom: 2rem;
}

.confirmation-image{
    max-width: 500px;
    margin-bottom: 2rem;
}

.error-message, .confirmation-message {
    font-size: 2rem;
    margin-bottom: 1rem;
}

.error-description, .confirmation-description {
    font-size: 1.2rem;
    margin-bottom: 2rem;
}

.redirect-links {
    list-style-type: none;
    padding: 0;
}

.redirect-links li {
    margin-bottom: 0.5rem;
}

.redirect-links a {
    text-decoration: none;
    color: #45bfd0;
    transition: color 0.3s ease-in-out;
}

.redirect-links a:hover {
    color: #088395;
}


#logo-image {
    max-width: 30px;
    max-height: 30px;
    margin-right: 5px;
    background-color: #ffffff;
    border-radius: 30%;
    margin-left: 10px;
}

.navbar-nav {
    margin-left: 10px;
}

.navbar {
    animation: slideInDown 1.3s ease-in-out;
    transform-origin: 0px 0px;
    height: 100%;
    
}

#card1 {
    color: #011b1f;
    border-width: 0;
    margin-top: 8vh;

}


#card3 {
    background-color: #ffffff;
    border-width: 0;
    margin-top: 8vh;

}

#card3 img {
    margin-top: 0;
}

#card3 h3 {
    margin-bottom: 0;
}

.card-img-top {
    max-width: 70vw;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
}

#diagnose-card {
    border-width: 0;
    margin-top: 4vh;
}

.celebrity-div a {
    display: block;
    height: 100%;
    width: 100%;
    text-decoration: none;
}


.recipe-div a {
    display: block;
    height: 100%;
    width: 100%;
    text-decoration: none;
}

.landing-page-div a {
    display: block;
    height: 100%;
    width: 100%;
    text-decoration: none;

}

.lp-div-img {
    max-width: 60vw;
}


.lp-div-img-vertical {
    display: inline;
}

.lp-div-img-horizontal {
    display: none;
}


.recipe-card-container,
.recipe-card {
    height: 100%;
}



.recipe-card,
.recipes-header-card,
#celebrities-header-card {
    border-width: 0;
}


.recipe-img {
    height: inherit;
    object-fit: cover;
}

.recipe-img {
    border-radius: 50%;
    width: 65%;
    margin: auto;
}

.recipe-details-img {
    max-height: 60vh;
    object-fit: contain;
    border-width: 0;
}


.celebrity-img {
    height: inherit;
    object-fit: contain;
}

.celebrity-div{

}


#tog,
#content {
    display: none
}

#tog:checked+#content {
    display: block
}


.dark-text {
    color: rgb(52, 51, 51) !important;
}

.light-text {
    color: #ffffff !important;
}


.card-title {
    text-align: center;
}

/* Form */
#subscribe {
    /* background-image: url("../images/bg5.jpeg"); */
    /* background-size: cover; */
    /* background-position: 75%; */
    padding: 15vh 10% 0 10%;
    flex-grow: 1;
    height: 94vh;
}

#subscribe-form {
    color: #ffffff;
    background-color: rgba(15, 154, 175, 0.6);
    padding: 30px;
}

#subscribe-form>h2 {
    color: #fafafa;
    margin-bottom: 20px;
}

.text-input {
    background: transparent;
    color: #fafafa;
    width: 100%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: 1px solid #fafafa;
    border-radius: 2px;
    padding: 0 5px;
}

.radio-buttons {
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.join-button {
    margin-top: 20px;
    border-radius: 2px;
    padding: 15px 32px;
    font-size: 100%;
    border-color: #088395;
    color: #088395;
    background-color: #fafafa;
}


#about-div,
#privacy-policy-div {
    margin-left: 10vw;
    margin-right: 10vw;
}


.video-player {
    width: 70vw;
    height: 39vw;
    margin: 0 auto;
    margin-bottom: 2vh;
}



#slideshow {
    text-align: center;
    overflow: hidden;
    height: 56vw;
    width: 70vw;
    margin: 0 auto;
    margin-bottom: 2vh;
    margin-top: 5vh;

}

.slide-wrapper {
    width: 630vw;
    -webkit-animation: slide 10s ease infinite;
}

.slide {
    float: left;
    height: 56vw;
    width: 70vw;
}


.slideshow-img {
    width: 100%;
    height: 100%;
}
/* ... */

